--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<script src=/bootstrap/bootstrap.js/>
+<script src=/bootstrap/jquery.js/>
 
+<!-- tabs ul li -->
+<ul class="tabs">
+</ul>
+<!-- tabs content -->
+<div class="container">
+</div>
