--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<script src=bootstrap/bootstrap.js></script>
-<script src=bootstrap/jquery.js></script>
+<script src=boostrap/bootstrap.js></script>
+<script src=boostrap/jquery.js></script>
 
 <!-- tabs ul li -->
 <ul class="tabs">
