--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src=boostrap/bootstrap.js></script>
 <script src=boostrap/jquery.js></script>
-<link rel="stylesheet" href=bootstrap/bootstrap.css>
+<link rel="stylesheet" href=boostrap/bootstrap.css>
 
 <div class="container">
   <ul class="nav nav-tabs" role="tablist"></ul>
