--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ $(document).ready(function(){
                  ]
     };*/
   
-  $.getJSON("json/micList.json", function(data){console.log(data);};
+  $.getJSON("json/micList.json", function(data){console.log(data);)};
     
     for (var i in data) {
       $('.nav-tabs').append('<li role="presentation" class="nav-item"><button class=nav-link data-bs-toggle="tab" data-bs-target="#' + i +'" aria-controls="' + i + '" role="tab" data-toggle="tab" type="button">' + i + '</button></li>');
