--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@ $(document).ready(function(){
     for (var i in data) {
       $('.nav-tabs').append('<li role="presentation" class="nav-item"><button class=nav-link data-bs-toggle="tab" data-bs-target="#' + i +'" aria-controls="' + i + '" role="tab" data-toggle="tab" type="button">' + i + '</button></li>');
     
-      var div = '<div role="tabpanel" class="tab-pane" id="' + i + '">';
+      var pills = '<div role="tabpanel" class="tab-pane" id="' + i + '">';
       
       for (var j = 0; j < data[i].length; j++) {
         var obj = data[i][j];
-        div += '<div class="d-flex align-items-start"><div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical"><button class="nav-link btn btn-primary" id="v-pills-' + obj.mic + '-tab"data-bs-toggle="pill" data-bs-target="#v-pills-' + obj.mic + '" type="button" role="tab" aria-controls="v-pills-' + obj.mic + '">' + obj.mic + '</button></div></div>';
+        pills += '<div class="d-flex align-items-start"><div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical"><button class="nav-link btn btn-primary" id="v-pills-' + obj.mic + '-tab"data-bs-toggle="pill" data-bs-target="#v-pills-' + obj.mic + '" type="button" role="tab" aria-controls="v-pills-' + obj.mic + '">' + obj.mic + '</button></div><div class="tab-content" id="v-pills-tabContent"><div class="tab-pane fade" id="v-pills-' + obj.mic + '" role="tabpanel" aria-labelledby="v-pills-' + obj.mic + '-tab">obj.time</div></div></div>';
      }
-     $('.tab-content').append(div);
+     $('.tab-content').append(pills);
 }
   });
   $('.nav-tabs li').eq(0).addClass('active');
